# cmake_example

./: CMakeLists.txt  main.cpp  pyproject.toml  setup.py
.github/workflows/: wheels.yml
